feat: Add conclusion slide with floating particles and luxury paths

--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
         <div class="nav-dot" data-slide="Vestiaire" onclick="scrollToSlide(13)"></div>
         <div class="nav-dot" data-slide="Chapter V" onclick="scrollToSlide(14)"></div>
         <div class="nav-dot" data-slide="Closet Builder" onclick="scrollToSlide(15)"></div>
-        <div class="nav-dot" data-slide="Thanks" onclick="scrollToSlide(16)"></div>
-        <div class="nav-dot" data-slide="Team" onclick="scrollToSlide(17)"></div>
+        <div class="nav-dot" data-slide="Conclusion" onclick="scrollToSlide(16)"></div>
+        <div class="nav-dot" data-slide="Thanks" onclick="scrollToSlide(17)"></div>
+        <div class="nav-dot" data-slide="Team" onclick="scrollToSlide(18)"></div>
     </div>
 
     <!-- EMPTY container: slides will be injected by slides/*.js -->
@@ -58,6 +59,7 @@
     <script src="slides/slide17.js"></script>
     <script src="slides/slide17_5.js"></script>
     <script src="slides/slide18_5.js"></script>
+    <script src="slides/slide20.js"></script>
     <script src="slides/slide18.js"></script>
     <script src="slides/slide19.js"></script>
 
